update a lot of file.

--- a/file/war3map.w3a.ini
+++ b/file/war3map.w3a.ini
@@ -2433,7 +2433,7 @@ DataA = {600.0000, 600.0000, 600.0000, 600.0000, 600.0000, 600.0000, 600.0000}
 -- 波持续时间
 DataB = {0.3000, 0.3000, 0.3000, 0.3000, 0.3000, 0.3000, 0.3000}
 -- 施加伤害
-DataC = {6000.0000, 8000.0000, 10000.0000, 12000.0000, 14000.0000, 16000.0000, 18000.0000}
+DataC = {6000.0000, 8000.0000, 10000.0000, 12000.0000, 14000.0000, 25000.0000, 40000.0000}
 -- 空中停留时间
 DataD = {1.0000, 1.0000, 1.0000, 1.0000, 1.0000, 1.0000, 1.0000}
 -- 持续时间 - 普通
@@ -5395,7 +5395,7 @@ Name = "亡殇"
 -- 提示工具 - 普通
 Tip = "亡殇"
 -- 提示工具 - 普通 - 扩展
-Ubertip = "死亡之后的你能对周围600范围单位造成一次性爆炸（100000 x 当前难度系数）点魔法伤害，只要有人死亡，你则复活。"
+Ubertip = "死亡之后的你能对周围600范围单位造成一次性爆炸（100000 x 当前难度系数）点魔法伤害."
 
 [AOae]
 _parent = "AOae"
@@ -10745,65 +10745,6 @@ Tip = "多重攻击"
 Ubertip = "对N个敌人进行一起攻击。"
 -- 目标允许
 targs = "air,ground,debris,enemy,neutral,organic"
-
-[A0L1]
-_parent = "Aroc"
--- 影响区域
-Area = 600.0000
--- 魔法施放时间间隔
-Cool = 0.0000
--- 目标伤害
-DataA = 0.0000
--- 最大输出伤害
-DataB = 0.0000
--- 最大目标数
-DataC = 0
--- 持续时间 - 普通
-Dur = 0.0000
--- 持续时间 - 英雄
-HeroDur = 0.0000
--- 效果 - 投射物图像
-Missileart = "war3mapImported\\gx.mdl"
--- 名字
-Name = "多重攻击（雷神）"
--- 需求
-Requires = ""
--- 提示工具 - 普通
-Tip = "多重攻击"
--- 提示工具 - 普通 - 扩展
-Ubertip = "对N个敌人进行一起攻击。"
--- 目标允许
-targs = "air,ground,debris,enemy,neutral,organic"
-
-[A0L2]
-_parent = "Aroc"
--- 影响区域
-Area = 600.0000
--- 魔法施放时间间隔
-Cool = 0.0000
--- 目标伤害
-DataA = 0.0000
--- 最大输出伤害
-DataB = 0.0000
--- 最大目标数
-DataC = 0
--- 持续时间 - 普通
-Dur = 0.0000
--- 持续时间 - 英雄
-HeroDur = 0.0000
--- 效果 - 投射物图像
-Missileart = "Abilities\\Weapons\\SearingArrow\\SearingArrowMissile.mdl"
--- 名字
-Name = "多重攻击（高级祭品）"
--- 需求
-Requires = ""
--- 提示工具 - 普通
-Tip = "多重攻击"
--- 提示工具 - 普通 - 扩展
-Ubertip = "对N个敌人进行一起攻击。"
--- 目标允许
-targs = "air,ground,debris,enemy,neutral,organic"
-
 
 [A01T]
 _parent = "AIlf"
@@ -18581,7 +18522,7 @@ Name = "|cffff0000夜神祭|r"
 -- 提示工具 - 普通
 Tip = "|cffff0000夜神祭|r(|cffffcc00D|r)"
 -- 提示工具 - 普通 - 扩展
-Ubertip = "|cffff6800黑阎|r在黑夜中独行,与六界生物签定契约,给予其强大的力量,但在死后却要效命契主.|n|n|cffffff00效果1:|r亲自杀死敌人后将创造一个祭品给自己/魔界,祭品属于自己时,会对敌方造成伤害.祭品属于魔界时,每次攻击都不会造成伤害,反而为回复生命.|cffff6800持续(等级的平方根+10)秒,祭品前3秒是无敌的.|n|r|cffffff00效果2:|r在每次使用技能或者物品时,能创造出3个祭品.|n|n|cffcc99ff祭品上限+10.|r|n|cffffff00当前祭品控制权为魔界,点击切换产生祭品的控制权为自己.|r"
+Ubertip = "|cffff6800黑阎|r在黑夜中独行,与六界生物签定契约,给予其强大的力量,但在死后却要效命契主.|n|n|cffffff00效果1:|r亲自杀死敌人后将创造一个祭品给自己/魔界,祭品属于自己时,会对敌方造成伤害.祭品属于魔界时,每次攻击都不会造成伤害,反而为回复生命.|cffff6800持续(等级的平方根+10)秒,祭品前3秒是无敌的.|n|r|cffffff00效果2:|r在每次使用技能或者物品时,能创造出2个祭品.|n|n|cffcc99ff祭品上限+10.|r|n|cffffff00当前祭品控制权为魔界,点击切换产生祭品的控制权为自己.|r"
 
 [A0A4]
 _parent = "Apxf"
@@ -20236,7 +20177,7 @@ targs = "air,ground,debris,enemy,neutral,organic"
 [A0BI]
 _parent = "Absk"
 -- 图标 - 普通
-Art = "ReplaceableTextures\\CommandButtons\\BTNMaskOfDeath.blp"
+Art = "ReplaceableTextures\\CommandButtons\\BTNRodOfNecromancy.blp"
 -- 魔法效果
 BuffID = ""
 -- 按钮位置 - 普通 (X)
@@ -20823,6 +20764,124 @@ race = "human"
 -- 等级要求
 reqLevel = 2
 
+[A0C8]
+_parent = "ANcl"
+-- 图标 - 普通
+Art = "ReplaceableTextures\\CommandButtons\\BTNAltarOfDarkness.blp"
+-- 按钮位置 - 普通 (X)
+"Buttonpos:1" = 1
+-- 按钮位置 - 普通 (Y)
+"Buttonpos:2" = 2
+-- 效果 - 施法者
+CasterArt = ""
+-- 魔法施放时间间隔
+Cool = 30.0000
+-- 魔法消耗
+Cost = 250
+-- 施法持续时间
+DataA = 0.0000
+-- 目标类型
+DataB = 2
+-- 选项
+DataC = 1
+-- 动作持续时间
+DataD = 0.0000
+-- 使其他技能无效
+DataE = 0
+-- 基础命令ID
+DataF = "build"
+-- 效果 - 目标点
+EffectArt = ""
+-- 热键 - 普通
+Hotkey = "W"
+-- 名字
+Name = "|cff0000ff阎罗殿|r"
+-- 命令串 - 使用/打开
+Order = "build"
+-- 需求
+Requires = "R006"
+-- 图标 - 学习
+ResearchArt = "ReplaceableTextures\\CommandButtons\\BTNAltarOfDarkness.blp"
+-- 按钮位置 - 研究 (X)
+"Researchbuttonpos:1" = 1
+-- 热键 - 学习
+Researchhotkey = "W"
+-- 提示工具 - 学习
+Researchtip = "学习|cff0000ff阎罗殿|r(|cffffcc00W|r)"
+-- 提示工具 - 学习 - 扩展
+Researchubertip = "|cffff6800黑阎|r进出死神的入口，千秋万代都有很多生灵都与其签定了亘古之长的契约，煞地之口名为阎罗殿。|n|n|cffffff00效果1：|r攻击敌方时，若存在有超过5个以上的祭品，则释放具有|cffffff0040%伤害与加成|r的|cff008000千鬼邪|r，冷却5s.|n|cffff99cc魔法值低于250时无效。|r|n|cffffff00效果2(主动效果)：|r在目标创造出阎罗殿，阎罗殿每1秒会创造出一个祭品，阎罗殿|cffff6800持续30s，冷却30s.|r|n|cff3366ff祭品上限+6|r|n"
+-- 施法距离
+Rng = 900.0000
+-- 效果 - 目标
+TargetArt = ""
+-- 效果 - 目标附加点1
+Targetattach = ""
+-- 提示工具 - 普通
+Tip = "|cff0000ff阎罗殿|r(|cffffcc00W|r)"
+-- 提示工具 - 普通 - 扩展
+Ubertip = "|cffff6800黑阎|r进出死神的入口，千秋万代都有很多生灵都与其签定了亘古之长的契约，煞地之口名为阎罗殿。|n|n|cffffff00效果1：|r攻击敌方时，若存在有超过5个以上的祭品，则释放具有|cffffff0040%伤害与加成|r的|cff008000千鬼邪|r，冷却5s.|n|cffff99cc魔法值低于250时无效。|r|n|cffffff00效果2(主动效果)：|r在目标创造出阎罗殿，阎罗殿每1秒会创造出一个祭品，阎罗殿|cffff6800持续30s，冷却30s.|r|n|cff3366ff祭品上限+6|r|n"
+-- 等级
+levels = 1
+-- 种族
+race = "human"
+-- 等级要求
+reqLevel = 2
+
+[A0C9]
+_parent = "AOsh"
+-- 影响区域
+Area = 0.0100
+-- 图标 - 普通
+Art = "ReplaceableTextures\\CommandButtons\\BTNCloakOfFlames.blp"
+-- 魔法效果
+BuffID = ""
+-- 按钮位置 - 普通 (X)
+"Buttonpos:1" = 2
+-- 魔法施放时间间隔
+Cool = 90.0000
+-- 魔法消耗
+Cost = 400
+-- 伤害
+DataA = 0.0100
+-- 最大伤害
+DataB = 0.0100
+-- 距离
+DataC = 0.0100
+-- 最终区域范围
+DataD = 0.0100
+-- 热键 - 普通
+Hotkey = "T"
+-- 效果 - 投射物图像
+Missileart = ""
+-- 效果 - 射弹速度
+Missilespeed = 0
+-- 名字
+Name = "|cffffff00赦魂诀|r"
+-- 需求
+Requires = "R007"
+-- 图标 - 学习
+ResearchArt = "ReplaceableTextures\\CommandButtons\\BTNCloakOfFlames.blp"
+-- 按钮位置 - 研究 (X)
+"Researchbuttonpos:1" = 2
+-- 热键 - 学习
+Researchhotkey = "T"
+-- 提示工具 - 学习
+Researchtip = "学习|cffffff00赦魂诀|r(|cffffcc00E|r)"
+-- 提示工具 - 学习 - 扩展
+Researchubertip = "|cffff6800黑阎|r身上掌控天地之能，剑上已附日月之灵，与其化魂之祭，共定一世。|n|n|cffffff00效果1（光环效果）：|r增加自身和所有友军50%的生命上限。|n|cffffff00效果2：|r每3秒产生一个祭品在自身周围。|n|cffff99cc魔法值低于400时无效。|r|n|cffffff00效果3（主动）：|r在目标立即产生1个带有多重攻击的持续30s的高级祭品，他的攻击速度是普通祭品的4倍，攻击力是普通祭品的4倍，且每次攻击都能同时攻击到友军和敌人，|cffff6800冷却90s.|r|n|cff3366ff祭品上限+6|r|n"
+-- 施法距离
+Rng = 900.0000
+-- 提示工具 - 普通
+Tip = "|cffffff00赦魂诀|r(|cffffcc00E|r)"
+-- 提示工具 - 普通 - 扩展
+Ubertip = "|cffff6800黑阎|r身上掌控天地之能，剑上已附日月之灵，与其化魂之祭，共定一世。|n|n|cffffff00效果1（光环效果）：|r增加自身和所有友军50%的生命上限。|n|cffffff00效果2：|r每3秒产生一个祭品在自身周围。|n|cffff99cc魔法值低于400时无效。|r|n|cffffff00效果3（主动）：|r在目标立即产生1个带有多重攻击的持续30s的高级祭品，他的攻击速度是普通祭品的4倍，攻击力是普通祭品的4倍，且每次攻击都能同时攻击到友军和敌人，|cffff6800冷却90s.|r|n|cff3366ff祭品上限+6|r|n"
+-- 等级
+levels = 1
+-- 种族
+race = "human"
+-- 等级要求
+reqLevel = 20
+
 [A0CA]
 _parent = "Assk"
 -- 最小伤害
@@ -21315,6 +21374,45 @@ EditorSuffix = "HP回复速度(400000)"
 -- 名字
 Name = " "
 
+[A0D2]
+_parent = "AOvd"
+-- 影响区域
+Area = 0.0000
+-- 图标 - 普通
+Art = "ReplaceableTextures\\CommandButtons\\BTNDoomGuard.blp"
+-- 魔法效果
+BuffID = ""
+-- 魔法消耗
+Cost = 800
+-- 持续时间 - 普通
+Dur = 0.0010
+-- 持续时间 - 英雄
+HeroDur = 0.0010
+-- 热键 - 普通
+Hotkey = "R"
+-- 名字
+Name = "|cffff00ff泣罗刹|r"
+-- 需求
+Requires = "R008"
+-- 图标 - 学习
+ResearchArt = "ReplaceableTextures\\CommandButtons\\BTNDoomGuard.blp"
+-- 热键 - 学习
+Researchhotkey = "R"
+-- 提示工具 - 学习
+Researchtip = "学习|cffff00ff泣罗刹|r(|cffffcc00R|r)"
+-- 提示工具 - 学习 - 扩展
+Researchubertip = "|cffff6800黑阎|r吞噬着大量祭品之魂，其魂也附于其中。遇敌之后，刹那瞬间，万千圣魂会侵蚀敌人，让其也化为这祭品中的一份。|n|n|cffffff00效果1：|r当自身受到必死伤害时，若自己存在有祭品，会杀死该祭品来免疫这次伤害，并|cffffff00无敌0.1s,回复5%生命|r。|n|cffff99cc魔法值低于600时无效。|r|n|cffffff00效果2：|r当祭品死亡时，会爆炸造成600范围的|cffff9900（力量X1.8+敏捷+智力X1.2）X（等级的平方根）X10%|r的伤害。|n|cffffff00效果3（主动效果）：|r在后面60秒内，产生的祭品数量将会暂时性的x3，冷却180s。|n|cff3366ff祭品上限+6|r"
+-- 提示工具 - 普通
+Tip = "|cffff00ff泣罗刹|r(|cffffcc00R|r)"
+-- 提示工具 - 普通 - 扩展
+Ubertip = "|cffff6800黑阎|r吞噬着大量祭品之魂，其魂也附于其中。遇敌之后，刹那瞬间，万千圣魂会侵蚀敌人，让其也化为这祭品中的一份。|n|n|cffffff00效果1：|r当自身受到必死伤害时，若自己存在有祭品，会杀死该祭品来免疫这次伤害，并|cffffff00无敌0.1s,回复5%生命|r。|n|cffff99cc魔法值低于600时无效。|r|n|cffffff00效果2：|r当祭品死亡时，会爆炸造成600范围的|cffff9900（力量X1.8+敏捷+智力X1.2）X（等级的平方根）X10%|r的伤害。|n|cffffff00效果3（主动效果）：|r在后面60秒内，产生的祭品数量将会暂时性的x3，冷却180s。|n|cff3366ff祭品上限+6|r"
+-- 种族
+race = "human"
+-- 等级要求
+reqLevel = 40
+-- 目标允许
+targs = ""
+
 [A0D3]
 _parent = "Assk"
 -- 最小伤害
@@ -21520,6 +21618,59 @@ targs = {
 "air,ground,organic,enemy,neutral",
 "air,ground,organic,enemy,neutral",
 }
+
+[A0DD]
+_parent = "AOww"
+-- 效果 - 施法动作
+Animnames = "spell"
+-- 影响区域
+Area = 0.0100
+-- 图标 - 普通
+Art = "ReplaceableTextures\\CommandButtons\\BTNFarSight.blp"
+-- 魔法效果
+BuffID = ""
+-- 按钮位置 - 普通 (Y)
+"Buttonpos:2" = 1
+-- 魔法施放时间间隔
+Cool = 300.0000
+-- 魔法消耗
+Cost = 1500
+-- 每秒伤害
+DataA = 0.0000
+-- 持续时间 - 普通
+Dur = 0.0010
+-- 持续时间 - 英雄
+HeroDur = 0.0010
+-- 热键 - 普通
+Hotkey = "T"
+-- 名字
+Name = "|cffff0000葬九天|r"
+-- 需求
+Requires = "R009,R00A,R00B"
+-- 图标 - 学习
+ResearchArt = "ReplaceableTextures\\CommandButtons\\BTNFarSight.blp"
+-- 按钮位置 - 研究 (X)
+"Researchbuttonpos:1" = 0
+-- 按钮位置 - 研究 (Y)
+"Researchbuttonpos:2" = 1
+-- 热键 - 学习
+Researchhotkey = "T"
+-- 提示工具 - 学习
+Researchtip = "学习|cffff0000葬九天|r(|cffffcc00T|r)"
+-- 提示工具 - 学习 - 扩展
+Researchubertip = "|cffff6800黑阎|r想起那屠其佳人之魔时，便会煞气外露，不为天人，只为远在异界的佳人，希望用这葬天之阵去埋葬所有魔族去祭奠他的爱人。|n|n立即在目标产生一个用血堆积而成的|cff3366ff600范围|r的法阵，法阵每秒会消耗地图上的随机的3个祭品(不会消耗高级祭品），|cffff6800同时造成极大的（力量X1.8+敏捷+智力X1.2）X（等级的平方根）伤害，法阵会持续直到没有祭品为止，冷却180s。|r|n|cff3366ff祭品上限+6|r"
+-- 提示工具 - 普通
+Tip = "|cffff0000葬九天|r(|cffffcc00T|r)"
+-- 提示工具 - 普通 - 扩展
+Ubertip = "|cffff6800黑阎|r想起那屠其佳人之魔时，便会煞气外露，不为天人，只为远在异界的佳人，希望用这葬天之阵去埋葬所有魔族去祭奠他的爱人。|n|n立即在目标产生一个用血堆积而成的|cff3366ff600范围|r的法阵，法阵每秒会消耗地图上的随机的3个祭品(不会消耗高级祭品），|cffff6800同时造成极大的（力量X1.8+敏捷+智力X1.2）X（等级的平方根）伤害，法阵会持续直到没有祭品为止，冷却180s。|r|n|cff3366ff祭品上限+6|r"
+-- 跳级要求
+levelSkip = 100
+-- 种族
+race = "human"
+-- 等级要求
+reqLevel = 100
+-- 目标允许
+targs = "air,ground,debris,enemy,neutral,organic"
 
 [A0DE]
 _parent = "ACct"
@@ -25370,11 +25521,11 @@ Researchhotkey = "W"
 -- 提示工具 - 学习
 Researchtip = "学习|cFF9999CC影重万生|r(|cffffcc00W|r)"
 -- 提示工具 - 学习 - 扩展
-Researchubertip = "|cffccff00辰寂|r的心,永远不会停......|n|n|cff33ff33效果1|r:攻击有5%的几率击晕对方1s.|n|cff33ff33效果2|r:攻击有5%的几率放出具有|cff33ff3333%|r基础伤害的|cffff66cc元轮天斩|r,冷却5s.|n|cff33ff33效果3|r:在释放|cffff66cc元轮天斩|r时,随机增加其0-100%的额外伤害.|n|cffff6699魔法值低于250时不会释放。|r"
+Researchubertip = "|cffccff00辰寂|r的心,永远不会停......|n|n|cff33ff33效果1|r:攻击有5%的几率击晕对方1s.|n|cff33ff33效果2|r:攻击有5%的几率放出具有|cff33ff3333%|r基础伤害的|cffff66cc元轮天斩|r,冷却3s.|n|cff33ff33效果3|r:在释放|cffff66cc元轮天斩|r时,随机增加其0-100%的额外伤害.|n|cffff6699魔法值低于250时不会释放。|r"
 -- 提示工具 - 普通
 Tip = "|cFF9999CC影重万生|r"
 -- 提示工具 - 普通 - 扩展
-Ubertip = "|cffccff00辰寂|r的心,永远不会停......|n|n|cff33ff33效果1|r:攻击有5%的几率击晕对方1s.|n|cff33ff33效果2|r:攻击有5%的几率放出具有|cff33ff3333%|r基础伤害的|cffff66cc元轮天斩|r,冷却5s.|n|cff33ff33效果3|r:在释放|cffff66cc元轮天斩|r时,随机增加其0-100%的额外伤害.|n|cffff6699魔法值低于250时不会释放。|r"
+Ubertip = "|cffccff00辰寂|r的心,永远不会停......|n|n|cff33ff33效果1|r:攻击有5%的几率击晕对方1s.|n|cff33ff33效果2|r:攻击有5%的几率放出具有|cff33ff3333%|r基础伤害的|cffff66cc元轮天斩|r,冷却3s.|n|cff33ff33效果3|r:在释放|cffff66cc元轮天斩|r时,随机增加其0-100%的额外伤害.|n|cffff6699魔法值低于250时不会释放。|r"
 -- 等级
 levels = 1
 -- 等级要求
@@ -25446,11 +25597,11 @@ Researchhotkey = "R"
 -- 提示工具 - 学习
 Researchtip = "学习|cFF99CC66黑曜诅咒|r(|cffffcc00R|r)"
 -- 提示工具 - 学习 - 扩展
-Researchubertip = "|cff98b4d0---“当吾最弱,汝不能敌”|r|n|n当辰寂的生命值有所损失时,会释放相应技能.|n技能1:|cffccff66每损失10%,召唤一只具有(力量 X 等级的平方根 X 33%)攻击力的圣魂在自身周围帮助战斗.(当生命值低于30%时圣魂具有多重攻击技能),持续5s,冷却0.5s.|r|n技能2:当一次性受到的伤害超过33%时候,立即释放一次具有1800范围的|cffccff66吞天妖刺(伤害力量 X 4 X 等级的平方根)|r,眩晕3s,冷却10s,|n技能3:减少所受到的|cffccff66n%伤害(对必死伤害无效),n为自身已经损失的生命值比,最高为90%|r.|n|cffff6699魔法值低于800时技能无效。|r"
+Researchubertip = "|cff98b4d0---“当吾最弱,汝不能敌”|r|n|n当辰寂的生命值有所损失时,会释放相应技能.|n技能1:|cffccff66每损失10%,召唤一只具有(力量 X 等级的平方根 X 33%)攻击力的圣魂在自身周围帮助战斗.(当生命值低于30%时圣魂具有多重攻击技能),持续5s,冷却0.5s.|r|n技能2:当一次性受到的伤害超过33%时候,立即释放一次具有1800范围的|cffccff66吞天妖刺(伤害力量 X 4 X 等级的平方根)|r,眩晕3s,冷却10s,|n技能3:减少所受到的|cffccff66n%伤害(对必死伤害无效),n为自身已经损失的生命值比,最高为75%|r.|n|cffff6699魔法值低于800时技能无效。|r"
 -- 提示工具 - 普通
 Tip = "|cFF99CC66黑曜诅咒|r"
 -- 提示工具 - 普通 - 扩展
-Ubertip = "|cff98b4d0---“当吾最弱,汝不能敌”|r|n|n当辰寂的生命值有所损失时,会释放相应技能.|n技能1:|cffccff66每损失10%,召唤一只具有(力量 X 等级的平方根 X 33%)攻击力的圣魂在自身周围帮助战斗.(当生命值低于30%时圣魂具有多重攻击技能),持续5s,冷却0.5s.|r|n技能2:当一次性受到的伤害超过33%时候,立即释放一次具有1800范围的|cffccff66吞天妖刺(伤害力量 X 4 X 等级的平方根)|r,眩晕3s,冷却10s,|n技能3:减少所受到的|cffccff66n%伤害(对必死伤害无效),n为自身已经损失的生命值比,最高为90%|r.|n|cffff6699魔法值低于800时技能无效。|r"
+Ubertip = "|cff98b4d0---“当吾最弱,汝不能敌”|r|n|n当辰寂的生命值有所损失时,会释放相应技能.|n技能1:|cffccff66每损失10%,召唤一只具有(力量 X 等级的平方根 X 33%)攻击力的圣魂在自身周围帮助战斗.(当生命值低于30%时圣魂具有多重攻击技能),持续5s,冷却0.5s.|r|n技能2:当一次性受到的伤害超过33%时候,立即释放一次具有1800范围的|cffccff66吞天妖刺(伤害力量 X 4 X 等级的平方根)|r,眩晕3s,冷却10s,|n技能3:减少所受到的|cffccff66n%伤害(对必死伤害无效),n为自身已经损失的生命值比,最高为75%|r.|n|cffff6699魔法值低于800时技能无效。|r"
 -- 跳级要求
 levelSkip = 10
 -- 等级
@@ -25780,10 +25931,7 @@ Rng = 900.0000
 -- 提示工具 - 普通
 Tip = "夜哀 - |cFF9900CC[引渡]|r(|cffffcc00A|r)"
 -- 提示工具 - 普通 - 扩展
-Ubertip = [=[
-|cFFCCFF66【主动】|r|n|cFF999999消耗90的剑灵|r|n
-无言的剑气,将斩断世间一切.|n
-|cFFCCFF66将目标困住,再落下无数强大巨剑对单个敌人持续5s,总共造成(力量 X 200 X 等级的平方根)的伤害.|r|cFFFF00CC冷却300s.|r]=]
+Ubertip = "|cffccff66【主动】|r|n|cff999999消耗90的剑灵|r|n|n无言的剑气,将斩断世间一切.|n|n|cffccff66将目标困住,再落下无数强大巨剑对单个敌人持续5s,总共造成(力量 X 40 X 等级的平方根)的伤害.|r|cffff00cc冷却300s.|r"
 -- 英雄技能
 hero = 0
 -- 等级
@@ -26828,6 +26976,79 @@ Ubertip = "增加周围单位每秒20点的魔法恢复速度。"
 item = 1
 -- 目标允许
 targs = "self"
+
+[A0GK]
+_parent = "Aimp"
+-- 图标 - 普通
+Art = "ReplaceableTextures\\CommandButtons\\BTNSkeletonWarrior.blp"
+-- 名字
+Name = "祭品特征"
+-- 需求
+Requires = ""
+-- 提示工具 - 普通
+Tip = "|cffffff00祭品特征|r"
+-- 提示工具 - 普通 - 扩展
+Ubertip = "祭品|cffff6800攻击玩家与其友军时,为其恢复1%的生命值.|n|r|n祭品|cff3366ff攻击魔界势力时,对其造成英雄的（力量X1.8+敏捷+智力X1.2）X（等级的平方根）%1伤害.|r"
+
+[A0L1]
+_parent = "Aroc"
+-- 影响区域
+Area = 600.0000
+-- 魔法施放时间间隔
+Cool = 0.0000
+-- 目标伤害
+DataA = 0.0000
+-- 最大输出伤害
+DataB = 0.0000
+-- 最大目标数
+DataC = 0
+-- 持续时间 - 普通
+Dur = 0.0000
+-- 持续时间 - 英雄
+HeroDur = 0.0000
+-- 效果 - 投射物图像
+Missileart = "war3mapImported\\gx.mdl"
+-- 名字
+Name = "多重攻击（雷神）"
+-- 需求
+Requires = ""
+-- 提示工具 - 普通
+Tip = "多重攻击"
+-- 提示工具 - 普通 - 扩展
+Ubertip = "对N个敌人进行一起攻击。"
+-- 目标允许
+targs = "air,ground,debris,enemy,neutral,organic"
+
+[A0L2]
+_parent = "Aroc"
+-- 影响区域
+Area = 600.0000
+-- 图标 - 普通
+Art = "ReplaceableTextures\\CommandButtons\\BTNSkeletonMage.blp"
+-- 魔法施放时间间隔
+Cool = 0.0000
+-- 目标伤害
+DataA = 0.0000
+-- 最大输出伤害
+DataB = 0.0000
+-- 最大目标数
+DataC = 0
+-- 持续时间 - 普通
+Dur = 0.0000
+-- 持续时间 - 英雄
+HeroDur = 0.0000
+-- 效果 - 投射物图像
+Missileart = "Abilities\\Weapons\\SearingArrow\\SearingArrowMissile.mdl"
+-- 名字
+Name = "多重攻击（高级祭品）"
+-- 需求
+Requires = ""
+-- 提示工具 - 普通
+Tip = "多重攻击"
+-- 提示工具 - 普通 - 扩展
+Ubertip = "对600范围所有敌人同时进行攻击。"
+-- 目标允许
+targs = "air,ground,debris,enemy,neutral,organic"
 
 [AB00]
 _parent = "Amls"
