--- a/file/war3map.w3t.ini
+++ b/file/war3map.w3t.ini
@@ -6474,7 +6474,7 @@ Name = "合成"
 -- 提示工具 - 基础
 Tip = "合成"
 -- 提示工具 - 扩展
-Ubertip = "将|cffffff00+X宝石|r放在|cffffff00第一个|r物品栏，将|cffffff00祝福石/强化石/诅咒石|r放在|cffffff00第二个|r物品栏。|n|cff6699ff+4/+5/+6/+7/+8/+9宝石 + 祝福石 = +4/+5/+6/+7/+8/+9祝福石|n+4/+5/+6/+7/+8/+9宝石 + 强化石 = +4/+5/+6/+7/+8/+9强化石|n+5/+6/+7/+8/+9宝石 + 祝福石 = +5/+6/+7/+8/+9诅咒石|r"
+Ubertip = "将|cffffff00+X宝石|r放在|cffffff00第一个|r物品栏，将|cffffff00祝福石/强化石/诅咒石|r放在|cffffff00第二个|r物品栏。|n|cff6699ff+4/+5/+6/+7/+8/+9宝石 + 祝福石 = +4/+5/+6/+7/+8/+9祝福石|n+4/+5/+6/+7/+8/+9宝石 + 强化石 = +4/+5/+6/+7/+8/+9强化石|n+5/+6/+7/+8/+9宝石 + 诅咒石 = +5/+6/+7/+8/+9诅咒石|r"
 -- 技能
 abilList = ""
 -- CD间隔组
@@ -6524,13 +6524,13 @@ _parent = "tkno"
 -- 按钮位置(X)
 "Buttonpos:1" = 3
 -- 说明
-Description = "能提高英雄1个等级，收费如下：|n1-80级：|cffffcc00当前等级x1|r木头|n80级以后：|cffffcc0080木头|r"
+Description = "能提高英雄1个等级，收费如下：|n|cffffcc00当前等级x1|r木头|n"
 -- 热键
 Hotkey = ""
 -- 提示工具 - 基础
 Tip = "购买能量之书"
 -- 提示工具 - 扩展
-Ubertip = "能提高英雄1个等级，收费如下：|n1-80级：|cffffcc00当前等级x1|r木头|n80级以后：|cffffcc0080木头|r"
+Ubertip = "能提高英雄1个等级，收费如下：|n|cffffcc00当前等级x1|r木头|n"
 -- 技能
 abilList = ""
 -- 物品分类
@@ -12618,7 +12618,6 @@ stockRegen = 0
 -- 使用次数
 uses = 0
 
-
 [ICS2]
 _parent = "tlum"
 -- 界面图标
@@ -12657,7 +12656,6 @@ scale = 3.0000
 stockRegen = 0
 -- 使用次数
 uses = 0
-
 
 [ICS3]
 _parent = "tlum"
@@ -12698,6 +12696,104 @@ stockRegen = 0
 -- 使用次数
 uses = 0
 
+[ICX1]
+_parent = "rst1"
+-- 界面图标
+Art = "ReplaceableTextures\\CommandButtons\\BTNchaoxian.blp"
+-- 说明
+Description = "洪荒宇宙之中，如此圣品降世极其罕见。|n|cffff99cc【仙】|r法魂+战魂|cffffff00的所有效果|n仙界英雄专属技能：仙尘祝福|n|r|cffffcc00增加150%技能伤害、250W攻击|n杀死敌人获得10点全属性|n受到伤害回复不超过伤害值的100000点HP|r"
+-- 热键
+Hotkey = ""
+-- 名字
+Name = "|cffff99cc【超仙】战法双魂+1|r"
+-- 提示工具 - 基础
+Tip = "|cffff99cc【超仙】战法双魂+1|r"
+-- 提示工具 - 扩展
+Ubertip = "洪荒宇宙之中，如此圣品降世极其罕见。|n|cffff99cc【仙】|r法魂+战魂|cffffff00的所有效果|n仙界英雄专属技能：仙尘祝福|n|r|cffffcc00增加150%技能伤害、250W攻击|n杀死敌人获得10点全属性|n受到伤害回复不超过伤害值的100000点HP|r"
+-- 技能
+abilList = "A0D8,A0BR,A09G"
+-- 颜色值(蓝)
+colorB = 0
+-- 颜色值(绿)
+colorG = 0
+-- CD间隔组
+cooldownID = "A0D8"
+-- 黄金消耗
+goldcost = 0
+-- 木材消耗
+lumbercost = 10080
+-- 最大库存量
+stockMax = 0
+-- 购买时间间隔
+stockRegen = 0
+-- 主动使用
+usable = 1
+
+[ICX2]
+_parent = "rst1"
+-- 界面图标
+Art = "ReplaceableTextures\\CommandButtons\\BTNchaoxian.blp"
+-- 说明
+Description = "洪荒宇宙之中，如此圣品降世极其罕见。|n|cffff99cc【仙】|r法魂+战魂|cffffff00的所有效果|n仙界英雄专属技能：仙尘祝福|n|r|cffffcc00增加200%技能伤害、350W攻击|n杀死敌人获得11点全属性|n受到伤害回复不超过伤害值的150000点HP|r"
+-- 热键
+Hotkey = ""
+-- 名字
+Name = "|cffff99cc【超仙】战法双魂+2|r"
+-- 提示工具 - 基础
+Tip = "|cffff99cc【超仙】战法双魂+2|r"
+-- 提示工具 - 扩展
+Ubertip = "洪荒宇宙之中，如此圣品降世极其罕见。|n|cffff99cc【仙】|r法魂+战魂|cffffff00的所有效果|n仙界英雄专属技能：仙尘祝福|n|r|cffffcc00增加200%技能伤害、350W攻击|n杀死敌人获得11点全属性|n受到伤害回复不超过伤害值的150000点HP|r"
+-- 技能
+abilList = "A0D8,A0BR,A09G"
+-- 颜色值(蓝)
+colorB = 0
+-- 颜色值(绿)
+colorG = 0
+-- CD间隔组
+cooldownID = "A0D8"
+-- 黄金消耗
+goldcost = 0
+-- 木材消耗
+lumbercost = 11080
+-- 最大库存量
+stockMax = 0
+-- 购买时间间隔
+stockRegen = 0
+-- 主动使用
+usable = 1
+
+[ICX3]
+_parent = "rst1"
+-- 界面图标
+Art = "ReplaceableTextures\\CommandButtons\\BTNchaoxian.blp"
+-- 说明
+Description = "洪荒宇宙之中，如此圣品降世极其罕见。|n|cffff99cc【仙】|r法魂+战魂|cffffff00的所有效果|n仙界英雄专属技能：仙尘祝福|n|r|cffffcc00增加250%技能伤害、500W攻击|n杀死敌人获得12点全属性|n受到伤害回复不超过伤害值的200000点HP|r"
+-- 热键
+Hotkey = ""
+-- 名字
+Name = "|cffff99cc【超仙】战法双魂+3|r"
+-- 提示工具 - 基础
+Tip = "|cffff99cc【超仙】战法双魂+3|r"
+-- 提示工具 - 扩展
+Ubertip = "洪荒宇宙之中，如此圣品降世极其罕见。|n|cffff99cc【仙】|r法魂+战魂|cffffff00的所有效果|n仙界英雄专属技能：仙尘祝福|n|r|cffffcc00增加250%技能伤害、500W攻击|n杀死敌人获得12点全属性|n受到伤害回复不超过伤害值的200000点HP|r"
+-- 技能
+abilList = "A0D8,A0BR,A09G"
+-- 颜色值(蓝)
+colorB = 0
+-- 颜色值(绿)
+colorG = 0
+-- CD间隔组
+cooldownID = "A0D8"
+-- 黄金消耗
+goldcost = 0
+-- 木材消耗
+lumbercost = 12080
+-- 最大库存量
+stockMax = 0
+-- 购买时间间隔
+stockRegen = 0
+-- 主动使用
+usable = 1
 
 [ICY1]
 _parent = "infs"
@@ -12773,7 +12869,6 @@ usable = 0
 -- 使用次数
 uses = 0
 
-
 [ICY3]
 _parent = "infs"
 -- 界面图标
@@ -12810,106 +12905,3 @@ stockRegen = 0
 usable = 0
 -- 使用次数
 uses = 0
-
-
-[ICX1]
-_parent = "rst1"
--- 界面图标
-Art = "ReplaceableTextures\\CommandButtons\\BTNchaoxian.blp"
--- 说明
-Description = "洪荒宇宙之中，如此圣品降世极其罕见。|n|cffff99cc【仙】|r法魂+战魂|cffffff00的所有效果|n仙界英雄专属技能：仙尘祝福|n|r|cffffcc00增加150%技能伤害、250W攻击|n杀死敌人获得10点全属性|n受到伤害回复不超过伤害值的100000点HP|r"
--- 热键
-Hotkey = ""
--- 名字
-Name = "|cffff99cc【超仙】战法双魂+1|r"
--- 提示工具 - 基础
-Tip = "|cffff99cc【超仙】战法双魂+1|r"
--- 提示工具 - 扩展
-Ubertip = "洪荒宇宙之中，如此圣品降世极其罕见。|n|cffff99cc【仙】|r法魂+战魂|cffffff00的所有效果|n仙界英雄专属技能：仙尘祝福|n|r|cffffcc00增加150%技能伤害、250W攻击|n杀死敌人获得10点全属性|n受到伤害回复不超过伤害值的100000点HP|r"
--- 技能
-abilList = "A0D8,A0BR,A09G"
--- 颜色值(蓝)
-colorB = 0
--- 颜色值(绿)
-colorG = 0
--- CD间隔组
-cooldownID = "A0D8"
--- 黄金消耗
-goldcost = 0
--- 木材消耗
-lumbercost = 10080
--- 最大库存量
-stockMax = 0
--- 购买时间间隔
-stockRegen = 0
--- 主动使用
-usable = 1
-
-
-[ICX2]
-_parent = "rst1"
--- 界面图标
-Art = "ReplaceableTextures\\CommandButtons\\BTNchaoxian.blp"
--- 说明
-Description = "洪荒宇宙之中，如此圣品降世极其罕见。|n|cffff99cc【仙】|r法魂+战魂|cffffff00的所有效果|n仙界英雄专属技能：仙尘祝福|n|r|cffffcc00增加200%技能伤害、350W攻击|n杀死敌人获得11点全属性|n受到伤害回复不超过伤害值的150000点HP|r"
--- 热键
-Hotkey = ""
--- 名字
-Name = "|cffff99cc【超仙】战法双魂+2|r"
--- 提示工具 - 基础
-Tip = "|cffff99cc【超仙】战法双魂+2|r"
--- 提示工具 - 扩展
-Ubertip = "洪荒宇宙之中，如此圣品降世极其罕见。|n|cffff99cc【仙】|r法魂+战魂|cffffff00的所有效果|n仙界英雄专属技能：仙尘祝福|n|r|cffffcc00增加200%技能伤害、350W攻击|n杀死敌人获得11点全属性|n受到伤害回复不超过伤害值的150000点HP|r"
--- 技能
-abilList = "A0D8,A0BR,A09G"
--- 颜色值(蓝)
-colorB = 0
--- 颜色值(绿)
-colorG = 0
--- CD间隔组
-cooldownID = "A0D8"
--- 黄金消耗
-goldcost = 0
--- 木材消耗
-lumbercost = 11080
--- 最大库存量
-stockMax = 0
--- 购买时间间隔
-stockRegen = 0
--- 主动使用
-usable = 1
-
-
-
-[ICX3]
-_parent = "rst1"
--- 界面图标
-Art = "ReplaceableTextures\\CommandButtons\\BTNchaoxian.blp"
--- 说明
-Description = "洪荒宇宙之中，如此圣品降世极其罕见。|n|cffff99cc【仙】|r法魂+战魂|cffffff00的所有效果|n仙界英雄专属技能：仙尘祝福|n|r|cffffcc00增加250%技能伤害、500W攻击|n杀死敌人获得12点全属性|n受到伤害回复不超过伤害值的200000点HP|r"
--- 热键
-Hotkey = ""
--- 名字
-Name = "|cffff99cc【超仙】战法双魂+3|r"
--- 提示工具 - 基础
-Tip = "|cffff99cc【超仙】战法双魂+3|r"
--- 提示工具 - 扩展
-Ubertip = "洪荒宇宙之中，如此圣品降世极其罕见。|n|cffff99cc【仙】|r法魂+战魂|cffffff00的所有效果|n仙界英雄专属技能：仙尘祝福|n|r|cffffcc00增加250%技能伤害、500W攻击|n杀死敌人获得12点全属性|n受到伤害回复不超过伤害值的200000点HP|r"
--- 技能
-abilList = "A0D8,A0BR,A09G"
--- 颜色值(蓝)
-colorB = 0
--- 颜色值(绿)
-colorG = 0
--- CD间隔组
-cooldownID = "A0D8"
--- 黄金消耗
-goldcost = 0
--- 木材消耗
-lumbercost = 12080
--- 最大库存量
-stockMax = 0
--- 购买时间间隔
-stockRegen = 0
--- 主动使用
-usable = 1
