--- a/file/war3map.w3u.ini
+++ b/file/war3map.w3u.ini
@@ -2214,7 +2214,7 @@ STR = 100
 -- 英雄 - 每等级提升力量
 STRplus = 20.0000
 -- 普通
-abilList = "A04N,AInv,A0B9"
+abilList = "A0A3,A04N,AInv,A0B9"
 -- 攻击 1 - 动画回复点
 backSw1 = 0.4000
 -- 分类 - 战役
@@ -2230,7 +2230,7 @@ dmgpt1 = 0.5500
 -- 占用人口
 fused = 0
 -- 英雄
-heroAbilList = "A0C7"
+heroAbilList = "A0C7,A0C8,A0C9,A0D2,A0DD"
 -- 魔法初始数量
 mana0 = 0
 -- 魔法最大值
@@ -3651,9 +3651,9 @@ def = 150.0000
 -- 防御升级奖励
 defUp = 15.0000
 -- 攻击 1 - 伤害升级奖励
-dmgUp1 = 50000
+dmgUp1 = 200000
 -- 攻击 1 - 基础伤害
-dmgplus1 = 100000
+dmgplus1 = 1000000
 -- 攻击 1 - 动画伤害点
 dmgpt1 = 0.1000
 -- 占用人口
@@ -7069,7 +7069,7 @@ unitSound = "peasant"
 [nmgv]
 _parent = "nmgv"
 -- 生命最大值
-HP = 1
+HP = 1000000000
 -- 名字
 Name = "仓库（输入-H到你身边）"
 -- 普通
@@ -11895,7 +11895,7 @@ STR = 1
 -- 普通
 abilList = "A04E,A09V,A09W"
 -- 主动攻击范围
-acquire = 6000.0000
+acquire = 2600.0000
 -- 攻击 1 - 攻击类型
 atkType1 = "chaos"
 -- 默认主动技能
@@ -11935,7 +11935,7 @@ modelScale = 2.0000
 -- 单位附加值
 points = 1
 -- 攻击 1 - 攻击范围
-rangeN1 = 6000
+rangeN1 = 2600
 -- 生命回复
 regenHP = 0.0000
 -- 魔法回复
@@ -13777,194 +13777,6 @@ weapType1 = ""
 -- 允许攻击模式
 weapsOn = 1
 
-
-[h010]
-_parent = "hpea"
--- 可建造建筑
-Builds = ""
--- 生命最大值
-HP = 1
--- 攻击 1 - 射弹自导允许
-"MissileHoming:1" = 1
--- 攻击 1 - 投射物图像
-"Missileart:1" = "war3mapImported\\gx.mdl"
--- 攻击 1 - 射弹速率
-"Missilespeed:1" = 1200
--- 名字
-Name = "雷神残影"
--- 普通
-abilList = "Aloc,Agho,Avul,A0L1"
--- 主动攻击范围
-acquire = 900.0000
--- 攻击 1 - 攻击类型
-atkType1 = "magic"
--- 动画 - 魔法施放回复
-castbsw = 0.1000
--- 动画 - 魔法施放点
-castpt = 0.1000
--- 碰撞体积
-collision = 0.0000
--- 攻击 1 - 攻击间隔
-cool1 = 2.0000
--- 攻击 1 - 基础伤害
-dmgplus1 = 1
--- 模型文件
-file = "units\\nightelf\\HeroDemonHunter\\HeroDemonHunter"
--- 占用人口
-fused = 0
--- 视野范围(夜晚)
-nsight = 100
--- 单位附加值
-points = 123
--- 攻击 1 - 攻击范围
-rangeN1 = 600
--- 攻击 1 - 伤害骰子面数
-sides1 = 1
--- 视野范围(白天)
-sight = 100
--- 基础速度
-spd = 0
--- 攻击 1 - 目标允许
-targs1 = "ground,structure,debris,air,item,ward"
--- 单位类别
-type = ""
--- 阴影图像(单位)
-unitShadow = ""
--- 使用科技
-upgrades = ""
--- 攻击 1 - 武器类型
-weapTp1 = "missile"
--- 攻击 1 - 武器声音
-weapType1 = ""
--- 允许攻击模式
-weapsOn = 1
-
-
-[h012]
-_parent = "hpea"
--- 可建造建筑
-Builds = ""
--- 生命最大值
-HP = 100
--- 图标 - 游戏界面
-Art = "ReplaceableTextures\\CommandButtons\\BTNSkeletonWarrior.blp"
--- 名字
-Name = "祭品"
--- 普通
-abilList = ""
--- 主动攻击范围
-acquire = 900.0000
--- 攻击 1 - 攻击类型
-atkType1 = "magic"
--- 动画 - 魔法施放回复
-castbsw = 0.1000
--- 动画 - 魔法施放点
-castpt = 0.1000
--- 碰撞体积
-collision = 0.0000
--- 攻击 1 - 攻击间隔
-cool1 = 1.0000
--- 提示工具 - 扩展
-Ubertip = ""
--- 攻击 1 - 基础伤害
-dmgplus1 = 1
--- 模型文件
-file = "units\\undead\\Skeleton\\Skeleton"
--- 占用人口
-fused = 0
--- 视野范围(夜晚)
-nsight = 100
--- 攻击 1 - 伤害骰子面数
-sides1 = 1
--- 视野范围(白天)
-sight = 100
--- 基础速度
-spd = 0
--- 攻击 1 - 目标允许
-targs1 = "ground,structure,debris,air,item,ward"
--- 单位类别
-type = ""
--- 阴影图像(单位)
-unitShadow = ""
--- 使用科技
-upgrades = ""
--- 攻击 1 - 武器类型
-weapTp1 = "missile"
--- 攻击 1 - 武器声音
-weapType1 = ""
--- 单位声音设置
-unitSound = "Skeleton"
--- 允许攻击模式
-weapsOn = 1
-
-[h011]
-_parent = "hpea"
--- 可建造建筑
-Builds = ""
--- 生命最大值
-HP = 1
--- 图标 - 游戏界面
-Art = "ReplaceableTextures\\CommandButtons\\BTNSkeletonMage.blp"
--- 攻击 1 - 射弹自导允许
-"MissileHoming:1" = 1
--- 攻击 1 - 投射物图像
-"Missileart:1" = "Abilities\\Weapons\\SearingArrow\\SearingArrowMissile.mdl"
--- 攻击 1 - 射弹速率
-"Missilespeed:1" = 1200
--- 名字
-Name = "高级祭品"
--- 普通
-abilList = "Avul,A0L2"
--- 主动攻击范围
-acquire = 900.0000
--- 攻击 1 - 攻击类型
-atkType1 = "magic"
--- 动画 - 魔法施放回复
-castbsw = 0.1000
--- 动画 - 魔法施放点
-castpt = 0.1000
--- 碰撞体积
-collision = 0.0000
--- 攻击 1 - 攻击间隔
-cool1 = 1.0000
--- 提示工具 - 扩展
-Ubertip = ""
--- 攻击 1 - 基础伤害
-dmgplus1 = 1
--- 模型文件
-file = "units\\undead\\SkeletonMage\\SkeletonMage"
--- 占用人口
-fused = 0
--- 视野范围(夜晚)
-nsight = 100
--- 单位附加值
-points = 123
--- 攻击 1 - 攻击范围
-rangeN1 = 600
--- 攻击 1 - 伤害骰子面数
-sides1 = 1
--- 视野范围(白天)
-sight = 100
--- 基础速度
-spd = 0
--- 攻击 1 - 目标允许
-targs1 = "ground,structure,debris,air,item,ward"
--- 单位类别
-type = ""
--- 阴影图像(单位)
-unitShadow = ""
--- 使用科技
-upgrades = ""
--- 攻击 1 - 武器类型
-weapTp1 = "missile"
--- 攻击 1 - 武器声音
-weapType1 = ""
--- 单位声音设置
-unitSound = "Skeleton"
--- 允许攻击模式
-weapsOn = 1
-
-
 [h003]
 _parent = "hpea"
 -- 可建造建筑
@@ -14348,190 +14160,6 @@ spd = 0
 type = ""
 -- 阴影图像(单位)
 unitShadow = ""
--- 使用科技
-upgrades = ""
--- 允许攻击模式
-weapsOn = 0
-
-
-[hh04]
-_parent = "hpea"
--- 可建造建筑
-Builds = ""
--- 名字 - 编辑器后缀
-EditorSuffix = "泣罗刹爆炸"
--- 生命最大值
-HP = 1
--- 名字
-Name = ""
--- 普通
-abilList = "Aloc,Avul"
--- 碰撞体积
-collision = 0.0000
--- 模型文件
-file = "Units\\Undead\\Abomination\\AbominationExplosion.mdl"
--- 占用人口
-fused = 0
--- 模型缩放
-modelScale = 4.0000
--- 视野范围(夜晚)
-nsight = 100
--- 单位附加值
-points = 123
--- 生命回复
-regenHP = 0.0000
--- 视野范围(白天)
-sight = 100
--- 基础速度
-spd = 0
--- 单位类别
-type = ""
--- 阴影图像(单位)
-unitShadow = ""
--- 使用科技
-upgrades = ""
--- 允许攻击模式
-weapsOn = 0
-
-[hh02]
-_parent = "hpea"
--- 可建造建筑
-Builds = ""
--- 生命最大值
-HP = 1
--- 名字
-Name = "阎罗殿"
--- 特殊效果
-Specialart = ""
--- 普通
-abilList = "Avul"
--- 提示工具 - 扩展
-Ubertip = "不断产生新的祭品。"
--- 图标 - 游戏界面
-Art = "ReplaceableTextures\\CommandButtons\\BTNAltarOfDepths.blp"
--- 可以逃跑
-canFlee = 0
--- 运输尺寸
-cargoSize = 0
--- 碰撞体积
-collision = 0.0000
--- 死亡时间(秒)
-death = 2.0000
--- 模型文件
-file = "buildings\\naga\\AltarOfDepths\\AltarOfDepths"
--- 占用人口
-fused = 0
--- 隐藏小地图显示
-hideOnMinimap = 1
--- X轴最大旋转角度(弧度)
-maxPitch = 25.0000
--- Y轴最大旋转角度(弧度)
-maxRoll = 25.0000
--- 模型缩放
-modelScale = 1.0000
--- 类型
-movetp = ""
--- 视野范围(夜晚)
-nsight = 1800
--- 单位附加值
-points = 0
--- 生命回复
-regenHP = 0.0000
--- 选择缩放
-scale = 0.1000
--- 阴影图像 - 高度
-shadowH = 0.0000
--- 阴影图像 - 宽度
-shadowW = 0.0000
--- 阴影图像 - X轴偏移
-shadowX = 0.0000
--- 阴影图像 - Y轴偏移
-shadowY = 0.0000
--- 基础速度
-spd = 0
--- 最大库存量
-stockMax = 0
--- 雇佣时间间隔
-stockRegen = 0
--- 单位类别
-type = "standon"
--- 阴影图像(单位)
-unitShadow = ""
--- 单位声音设置
-unitSound = "AltarOfDepths"
--- 使用科技
-upgrades = ""
--- 允许攻击模式
-weapsOn = 0
-
-[hh05]
-_parent = "hpea"
--- 可建造建筑
-Builds = ""
--- 生命最大值
-HP = 100000000
--- 名字
-Name = "葬九天之阵"
--- 特殊效果
-Specialart = ""
--- 普通
-abilList = "Aloc,Avul"
--- 可以逃跑
-canFlee = 0
--- 运输尺寸
-cargoSize = 0
--- 碰撞体积
-collision = 0.0000
--- 死亡时间(秒)
-death = 2.0000
--- 模型文件
-file = "war3mapImported\\ManaTapAura.mdl"
--- 占用人口
-fused = 0
--- 颜色值(绿)
-green = 0
--- 颜色值(蓝)
-blue = 0
--- 隐藏小地图显示
-hideOnMinimap = 1
--- X轴最大旋转角度(弧度)
-maxPitch = 25.0000
--- Y轴最大旋转角度(弧度)
-maxRoll = 25.0000
--- 模型缩放
-modelScale = 7.0000
--- 类型
-movetp = ""
--- 视野范围(夜晚)
-nsight = 1800
--- 单位附加值
-points = 0
--- 生命回复
-regenHP = 0.0000
--- 选择缩放
-scale = 0.1000
--- 阴影图像 - 高度
-shadowH = 0.0000
--- 阴影图像 - 宽度
-shadowW = 0.0000
--- 阴影图像 - X轴偏移
-shadowX = 0.0000
--- 阴影图像 - Y轴偏移
-shadowY = 0.0000
--- 视野范围(白天)
-sight = 1800
--- 基础速度
-spd = 0
--- 最大库存量
-stockMax = 0
--- 雇佣时间间隔
-stockRegen = 0
--- 单位类别
-type = "standon"
--- 阴影图像(单位)
-unitShadow = ""
--- 单位声音设置
-unitSound = ""
 -- 使用科技
 upgrades = ""
 -- 允许攻击模式
@@ -15346,7 +14974,7 @@ abilList = "Avul,Aloc"
 -- 碰撞体积
 collision = 0.0000
 -- 模型文件
-file = ""
+file = ".mdl"
 -- 占用人口
 fused = 0
 -- 魔法初始数量
@@ -15637,6 +15265,197 @@ upgrades = ""
 -- 允许攻击模式
 weapsOn = 0
 
+[h010]
+_parent = "hpea"
+-- 可建造建筑
+Builds = ""
+-- 生命最大值
+HP = 1
+-- 攻击 1 - 射弹自导允许
+"MissileHoming:1" = 1
+-- 攻击 1 - 投射物图像
+"Missileart:1" = "war3mapImported\\gx.mdl"
+-- 攻击 1 - 射弹速率
+"Missilespeed:1" = 1200
+-- 名字
+Name = "雷神残影"
+-- 普通
+abilList = "Aloc,Agho,Avul,A0L1"
+-- 主动攻击范围
+acquire = 900.0000
+-- 攻击 1 - 攻击类型
+atkType1 = "magic"
+-- 动画 - 魔法施放回复
+castbsw = 0.1000
+-- 动画 - 魔法施放点
+castpt = 0.1000
+-- 碰撞体积
+collision = 0.0000
+-- 攻击 1 - 攻击间隔
+cool1 = 1.0000
+-- 攻击 1 - 基础伤害
+dmgplus1 = 1
+-- 模型文件
+file = "units\\nightelf\\HeroDemonHunter\\HeroDemonHunter"
+-- 占用人口
+fused = 0
+-- 视野范围(夜晚)
+nsight = 100
+-- 单位附加值
+points = 123
+-- 攻击 1 - 攻击范围
+rangeN1 = 600
+-- 攻击 1 - 伤害骰子面数
+sides1 = 1
+-- 视野范围(白天)
+sight = 100
+-- 基础速度
+spd = 0
+-- 攻击 1 - 目标允许
+targs1 = "ground,structure,debris,air,item,ward"
+-- 单位类别
+type = ""
+-- 阴影图像(单位)
+unitShadow = ""
+-- 使用科技
+upgrades = ""
+-- 攻击 1 - 武器类型
+weapTp1 = "missile"
+-- 攻击 1 - 武器声音
+weapType1 = ""
+-- 允许攻击模式
+weapsOn = 1
+
+[h011]
+_parent = "hpea"
+-- 图标 - 游戏界面
+Art = "ReplaceableTextures\\CommandButtons\\BTNSkeletonMage.blp"
+-- 可建造建筑
+Builds = ""
+-- 生命最大值
+HP = 1
+-- 攻击 1 - 射弹自导允许
+"MissileHoming:1" = 1
+-- 攻击 1 - 投射物图像
+"Missileart:1" = "Abilities\\Weapons\\SearingArrow\\SearingArrowMissile.mdl"
+-- 攻击 1 - 射弹速率
+"Missilespeed:1" = 1200
+-- 名字
+Name = "高级祭品"
+-- 提示工具 - 扩展
+Ubertip = ""
+-- 普通
+abilList = "Avul,A0L2,A0GK"
+-- 主动攻击范围
+acquire = 900.0000
+-- 攻击 1 - 攻击类型
+atkType1 = "magic"
+-- 黄金奖励 - 骰子数量
+bountydice = 0
+-- 黄金奖励 - 基础值
+bountyplus = 1
+-- 黄金奖励 - 骰子面数
+bountysides = 0
+-- 动画 - 魔法施放回复
+castbsw = 0.1000
+-- 动画 - 魔法施放点
+castpt = 0.1000
+-- 碰撞体积
+collision = 0.0000
+-- 攻击 1 - 攻击间隔
+cool1 = 0.5000
+-- 攻击 1 - 基础伤害
+dmgplus1 = 1
+-- 模型文件
+file = "units\\undead\\SkeletonMage\\SkeletonMage"
+-- 占用人口
+fused = 0
+-- 视野范围(夜晚)
+nsight = 100
+-- 单位附加值
+points = 123
+-- 攻击 1 - 攻击范围
+rangeN1 = 600
+-- 攻击 1 - 伤害骰子面数
+sides1 = 1
+-- 视野范围(白天)
+sight = 100
+-- 基础速度
+spd = 0
+-- 攻击 1 - 目标允许
+targs1 = "ground,structure,debris,air,item,ward"
+-- 单位类别
+type = ""
+-- 单位声音设置
+unitSound = "Skeleton"
+-- 使用科技
+upgrades = ""
+-- 攻击 1 - 武器类型
+weapTp1 = "missile"
+-- 攻击 1 - 武器声音
+weapType1 = ""
+-- 允许攻击模式
+weapsOn = 1
+
+[h012]
+_parent = "hpea"
+-- 图标 - 游戏界面
+Art = "ReplaceableTextures\\CommandButtons\\BTNSkeletonWarrior.blp"
+-- 可建造建筑
+Builds = ""
+-- 生命最大值
+HP = 100
+-- 名字
+Name = "祭品"
+-- 提示工具 - 扩展
+Ubertip = ""
+-- 普通
+abilList = "A0GK"
+-- 主动攻击范围
+acquire = 900.0000
+-- 攻击 1 - 攻击类型
+atkType1 = "magic"
+-- 黄金奖励 - 骰子数量
+bountydice = 0
+-- 黄金奖励 - 基础值
+bountyplus = 1
+-- 黄金奖励 - 骰子面数
+bountysides = 0
+-- 动画 - 魔法施放回复
+castbsw = 0.1000
+-- 动画 - 魔法施放点
+castpt = 0.1000
+-- 碰撞体积
+collision = 0.0000
+-- 攻击 1 - 基础伤害
+dmgplus1 = 1
+-- 模型文件
+file = "units\\undead\\Skeleton\\Skeleton"
+-- 占用人口
+fused = 0
+-- 视野范围(夜晚)
+nsight = 100
+-- 攻击 1 - 伤害骰子面数
+sides1 = 1
+-- 视野范围(白天)
+sight = 100
+-- 基础速度
+spd = 522
+-- 攻击 1 - 目标允许
+targs1 = "ground,structure,debris,air,item,ward"
+-- 单位类别
+type = ""
+-- 单位声音设置
+unitSound = "Skeleton"
+-- 使用科技
+upgrades = ""
+-- 攻击 1 - 武器类型
+weapTp1 = "missile"
+-- 攻击 1 - 武器声音
+weapType1 = ""
+-- 允许攻击模式
+weapsOn = 1
+
 [h016]
 _parent = "hpea"
 -- 可建造建筑
@@ -15898,6 +15717,187 @@ weapTp1 = "missile"
 weapType1 = ""
 -- 允许攻击模式
 weapsOn = 1
+
+[hh02]
+_parent = "hpea"
+-- 图标 - 游戏界面
+Art = "ReplaceableTextures\\CommandButtons\\BTNAltarOfDepths.blp"
+-- 可建造建筑
+Builds = ""
+-- 生命最大值
+HP = 1
+-- 名字
+Name = "阎罗殿"
+-- 特殊效果
+Specialart = ""
+-- 提示工具 - 扩展
+Ubertip = "不断产生新的祭品。"
+-- 普通
+abilList = "Avul"
+-- 可以逃跑
+canFlee = 0
+-- 运输尺寸
+cargoSize = 0
+-- 碰撞体积
+collision = 0.0000
+-- 死亡时间(秒)
+death = 2.0000
+-- 模型文件
+file = "buildings\\undead\\AltarOfDarkness\\AltarOfDarkness.mdl"
+-- 占用人口
+fused = 0
+-- 隐藏小地图显示
+hideOnMinimap = 1
+-- X轴最大旋转角度(弧度)
+maxPitch = 25.0000
+-- Y轴最大旋转角度(弧度)
+maxRoll = 25.0000
+-- 最小高度
+moveFloor = 30.0000
+-- 高度
+moveHeight = 30.0000
+-- 类型
+movetp = ""
+-- 视野范围(夜晚)
+nsight = 1800
+-- 单位附加值
+points = 0
+-- 生命回复
+regenHP = 0.0000
+-- 选择缩放
+scale = 3.0000
+-- 阴影图像 - 高度
+shadowH = 0.0000
+-- 阴影图像 - 宽度
+shadowW = 0.0000
+-- 阴影图像 - X轴偏移
+shadowX = 0.0000
+-- 阴影图像 - Y轴偏移
+shadowY = 0.0000
+-- 基础速度
+spd = 0
+-- 最大库存量
+stockMax = 0
+-- 雇佣时间间隔
+stockRegen = 0
+-- 单位类别
+type = "standon"
+-- 阴影图像(单位)
+unitShadow = ""
+-- 单位声音设置
+unitSound = "AltarOfDepths"
+-- 使用科技
+upgrades = ""
+-- 允许攻击模式
+weapsOn = 0
+
+[hh04]
+_parent = "hpea"
+-- 可建造建筑
+Builds = ""
+-- 名字 - 编辑器后缀
+EditorSuffix = "泣罗刹爆炸"
+-- 生命最大值
+HP = 1
+-- 名字
+Name = ""
+-- 普通
+abilList = "Aloc,Avul"
+-- 碰撞体积
+collision = 0.0000
+-- 模型文件
+file = "Units\\Undead\\Abomination\\AbominationExplosion.mdl"
+-- 占用人口
+fused = 0
+-- 模型缩放
+modelScale = 1.2000
+-- 视野范围(夜晚)
+nsight = 100
+-- 单位附加值
+points = 123
+-- 生命回复
+regenHP = 0.0000
+-- 视野范围(白天)
+sight = 100
+-- 基础速度
+spd = 0
+-- 单位类别
+type = ""
+-- 阴影图像(单位)
+unitShadow = ""
+-- 使用科技
+upgrades = ""
+-- 允许攻击模式
+weapsOn = 0
+
+[hh05]
+_parent = "hpea"
+-- 可建造建筑
+Builds = ""
+-- 生命最大值
+HP = 100000000
+-- 名字
+Name = "葬九天之阵"
+-- 特殊效果
+Specialart = ""
+-- 普通
+abilList = "Aloc,Avul"
+-- 可以逃跑
+canFlee = 0
+-- 运输尺寸
+cargoSize = 0
+-- 碰撞体积
+collision = 0.0000
+-- 死亡时间(秒)
+death = 2.0000
+-- 模型文件
+file = "war3mapImported\\ManaTapAura.mdl"
+-- 占用人口
+fused = 0
+-- 隐藏小地图显示
+hideOnMinimap = 1
+-- X轴最大旋转角度(弧度)
+maxPitch = 25.0000
+-- Y轴最大旋转角度(弧度)
+maxRoll = 25.0000
+-- 模型缩放
+modelScale = 5.0000
+-- 类型
+movetp = ""
+-- 视野范围(夜晚)
+nsight = 1800
+-- 单位附加值
+points = 0
+-- 生命回复
+regenHP = 0.0000
+-- 选择缩放
+scale = 0.1000
+-- 阴影图像 - 高度
+shadowH = 0.0000
+-- 阴影图像 - 宽度
+shadowW = 0.0000
+-- 阴影图像 - X轴偏移
+shadowX = 0.0000
+-- 阴影图像 - Y轴偏移
+shadowY = 0.0000
+-- 视野范围(白天)
+sight = 1800
+-- 基础速度
+spd = 0
+-- 最大库存量
+stockMax = 0
+-- 雇佣时间间隔
+stockRegen = 0
+-- 单位类别
+type = "standon"
+-- 阴影图像(单位)
+unitShadow = ""
+-- 单位声音设置
+unitSound = ""
+-- 使用科技
+upgrades = ""
+-- 允许攻击模式
+weapsOn = 0
 
 [hs00]
 _parent = "hpea"
