--- a/file/war3map.w3a.ini
+++ b/file/war3map.w3a.ini
@@ -19603,6 +19603,25 @@ Name = "凤凰火焰(翅膀)"
 -- 提示工具 - 普通
 Tip = "凤凰火焰(翅膀)"
 
+[AQ00]
+_parent = "Apxf"
+-- 魔法施放时间间隔
+Cool = 6.000
+-- 初始伤害
+DataA = 1.0000
+-- 每秒伤害
+DataB = 1.0000
+-- 持续时间 - 普通
+Dur = 0.0100
+-- 持续时间 - 英雄
+HeroDur = 0.0100
+-- 效果 - 投射物图像
+Missileart = "Abilities\\Spells\\Undead\\DeathCoil\\DeathCoilMissile.mdl"
+-- 名字
+Name = "凤凰火焰(泣罗刹爆炸)"
+-- 提示工具 - 普通
+Tip = "凤凰火焰(泣罗刹爆炸)"
+
 [A0AP]
 _parent = "ANca"
 -- 分裂伤害参数
