--- a/file/war3map.w3u.ini
+++ b/file/war3map.w3u.ini
@@ -15796,17 +15796,17 @@ _parent = "hpea"
 -- 可建造建筑
 Builds = ""
 -- 名字 - 编辑器后缀
-EditorSuffix = "泣罗刹爆炸"
+EditorSuffix = "泣罗刹后续伤害"
 -- 生命最大值
 HP = 1
 -- 名字
 Name = ""
 -- 普通
-abilList = "Aloc,Avul"
+abilList = "Aloc,Avul,AQ00"
 -- 碰撞体积
 collision = 0.0000
 -- 模型文件
-file = "Units\\Undead\\Abomination\\AbominationExplosion.mdl"
+file = ".mdl"
 -- 占用人口
 fused = 0
 -- 模型缩放
